# CompIntel-Researcher

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  技术分析.md  简历-新版.md  简历包装.md  项目改进记录.md
.claude/: fix_spec.md  fix_spec_streaming.md
compintel/: __init__.py  api.py  audit_store.py  bundle.py  evaluate.py  events.py  execution.py  graph.py  llm.py  parsing.py  progress.py  regression_test.py  run.py  schemas.py  server.py  settings.py  state.py  tracker.py
compintel/agents/: __init__.py  base.py  competitor_profiler.py  curator.py  editor.py  intent_analyst.py  market_analyst.py  rag_retriever.py  report_writer.py  research_planner.py  reviewer.py  scrape_worker.py  search_worker.py  swot_synthesizer.py
compintel/core/: __init__.py  llm_service.py  state_adapter.py
compintel/export/: __init__.py  base.py  formatter.py
compintel/prompts/: __init__.py  base.py  curator.yaml  editor.yaml  intent_analyst.yaml  market_analyst.yaml  research_planner.yaml  reviewer.yaml  swot_competitor.yaml  swot_cross.yaml  templates.py
compintel/rag/: __init__.py  base.py  data_loader.py  qdrant_store.py
compintel/tools/: __init__.py  registry.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CompIntelInput.tsx  ComparisonTable.tsx  PipelineProgress.tsx  ReportViewer.tsx  SWOTMatrix.tsx
frontend/lib/: compintel.ts  markdown.ts  types.ts
tests/: test_compintel_core.py  test_regression.py
